--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,49 +1,39 @@
-name: Tests
+name: tests
 on:
-  push:
-    branches:
-      - main
-      - '*.x'
-    paths-ignore:
-      - 'docs/**'
-      - '*.md'
-      - '*.rst'
   pull_request:
-    paths-ignore:
-      - 'docs/**'
-      - '*.md'
-      - '*.rst'
+  push:
+    branches: [main, stable]
 jobs:
 #  tests:
-#    name: ${{ matrix.name || matrix.python }}
-#    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+#    runs-on: ubuntu-latest
 #    strategy:
 #      fail-fast: false
 #      matrix:
-#        python: ['3.12']
+#        python: ['3.13', '3.12']
 #    steps:
-#      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-#      - uses: actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f # v5.1.1
+#      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+#      - uses: astral-sh/setup-uv@f94ec6bedd8674c4426838e6b50417d36b6ab231 # v5.3.1
+#        with:
+#          enable-cache: true
+#          prune-cache: false
+#      - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
 #        with:
 #          python-version: ${{ matrix.python }}
-#          allow-prereleases: true
-#          cache: pip
-#          cache-dependency-path: requirements*/*.txt
-#      - run: pip install tox
-#      - run: tox run -e ${{ matrix.tox || format('py{0}', matrix.python) }}
+#      - run: uv run --locked tox run -e ${{ format('py{0}', matrix.python) }}
   typing:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-      - uses: actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f # v5.1.1
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: astral-sh/setup-uv@f94ec6bedd8674c4426838e6b50417d36b6ab231 # v5.3.1
         with:
-          python-version: '3.x'
-          cache: pip
-          cache-dependency-path: requirements*/*.txt
+          enable-cache: true
+          prune-cache: false
+      - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
+        with:
+          python-version-file: pyproject.toml
       - name: cache mypy
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf # v4.2.2
         with:
           path: ./.mypy_cache
           key: mypy|${{ hashFiles('pyproject.toml') }}
-      - run: pip install tox
-      - run: tox run -e typing
+      - run: uv run --locked tox run -e typing
